<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.MainFragment">
    <RelativeLayout
        android:id="@+id/fragmentMainHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/info_text"
            android:textAppearance="?android:attr/textAppearanceLarge"/>
    </RelativeLayout>
    <GridLayout
        android:id="@+id/fragmentMainContent"
        android:layout_below="@id/fragmentMainHeader"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2">
        <EditText android:id="@+id/edit_street"
            android:singleLine="true"
            android:layout_column="1"
            android:layout_gravity="start|fill"
            android:layout_row="0"
            android:hint="@string/edit_message_street"/>
        <TextView
            android:layout_column="0"
            android:layout_row="0"
            android:layout_gravity="start"
            android:text="@string/edit_message_street"
            android:textSize="@dimen/text_size"/>
        <EditText android:id="@+id/edit_street_numer"
            android:singleLine="true"
            android:layout_column="1"
            android:layout_gravity="start|fill"
            android:layout_row="1"
            android:hint="@string/edit_message_street_number"/>
        <TextView
            android:layout_column="0"
            android:layout_row="1"
            android:layout_gravity="start"
            android:text="@string/edit_message_street_number"
            android:textSize="@dimen/text_size"/>
        <EditText android:id="@+id/edit_message_zip"
            android:singleLine="true"
            android:layout_column="1"
            android:layout_gravity="start|fill"
            android:layout_row="2"
            android:inputType="number"
            android:maxLength="5"
            android:hint="@string/edit_message_zip"/>
        <TextView
            android:layout_column="0"
            android:layout_row="2"
            android:layout_gravity="start"
            android:text="@string/edit_message_zip"
            android:textSize="@dimen/text_size"/>
        <Spinner
            android:id="@+id/spinner_distance_range"
            android:layout_column="1"
            android:layout_gravity="start|fill"
            android:layout_row="3">
        </Spinner>
        <TextView
            android:layout_column="0"
            android:layout_row="3"
            android:layout_gravity="start"
            android:text="@string/view_message_radius"
            android:textSize="@dimen/text_size"/>
        <Button
            android:id="@+id/buttonFindOffers"
            android:layout_column="1"
            android:layout_gravity="start|fill"
            android:layout_row="4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_find_offers"/>
    </GridLayout>
</RelativeLayout>
